--- a/indi_allsky/flask/templates/configlist.html
+++ b/indi_allsky/flask/templates/configlist.html
@@ -4,6 +4,14 @@
 
 {% block head %}
 <style>
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+
+th, td {
+  padding: 5px;
+}
 </style>
 <script type="text/javascript">
 var camera_id = {{ camera_id }};
@@ -13,24 +21,28 @@ var camera_id = {{ camera_id }};
 
 {% block content %}
 <div class="container">
-<div class="row">
-    <div class="col-sm-1 fw-bold">ID</div>
-    <div class="col-sm-2 fw-bold">Create</div>
-    <div class="col-sm-2 fw-bold">User</div>
-    <div class="col-sm-2 fw-bold">Level</div>
-    <div class="col-sm-1 fw-bold">Encrypted</div>
-    <div class="col-sm-4 fw-bold">Note</div>
+<table>
+<tr>
+  <th>ID</th>
+  <th>Create</th>
+  <th>User</th>
+  <th>Level</th>
+  <th>Encrypted</th>
+  <th>Link</th>
+  <th>Note</th>
 </div>
 {% for config in config_list %}
-<div class="row">
-    <div class="col-sm-1">{{ config.id}}</div>
-    <div class="col-sm-2">{{ config.createDate.strftime('%Y-%m-%d %H:%M:%S') }}</div>
-    <div class="col-sm-2">{{ config.username }}</div>
-    <div class="col-sm-2">{{ config.level }}</div>
-    <div class="col-sm-1">{{ config.encrypted }}</div>
-    <div class="col-sm-4">{{ config.note }}</div>
-</div>
+<tr>
+  <td>{{ config.id}}</td>
+  <td>{{ config.createDate.strftime('%Y-%m-%d %H:%M:%S') }}</td>
+  <td>{{ config.username }}</td>
+  <td>{{ config.level }}</td>
+  <td>{{ config.encrypted }}</td>
+  <td><a href="{{ url_for('indi_allsky.configdownload_view', id=config.id) }}" class="text-decoration-none link-info">Download</a></td>
+  <td>{{ config.note }}</td>
+</tr>
 {% endfor %}
+</table>
 </div>
 <div style="height:20px;"></div>
 <div>Note: Configs from deleted users will not be displayed, but they are still in the database</div>
