add level to filename

--- a/indi_allsky/flask/templates/configlist.html
+++ b/indi_allsky/flask/templates/configlist.html
@@ -45,5 +45,5 @@ var camera_id = {{ camera_id }};
 </table>
 </div>
 <div style="height:20px;"></div>
-<div>Note: Configs from deleted users will not be displayed, but they are still in the database</div>
+<div style="font-size:12px;">Note: Configs from deleted users will not be displayed, but they are still in the database</div>
 {% endblock %}
