config upload working via ajax

--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -22,6 +22,8 @@ var camera_id = {{ camera_id }};
 {% endblock %}
 
 {% block content %}
+<div class="container h-100">
+
 <form id="form_config" onSubmit="return false;" autocomplete="off">
 
 <nav>
@@ -7986,6 +7988,7 @@ var camera_id = {{ camera_id }};
 
 
 </form>
+</div>
 
 <script>
 const successMessage = $('#success-message');
