--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -4086,7 +4086,13 @@ var camera_id = {{ camera_id }};
     <div class="form-group row">
         <div class="col-sm-2"></div>
         <div class="col-sm-2">
-            <div><a href="{{ url_for('indi_allsky.config_download_view', id=config_id) }}"><span class="badge rounded-pill bg-primary">Backup Config</span></a></div>
+            <div><a href="{{ url_for('indi_allsky.config_list_view') }}"><span class="badge bg-success">Config History</span></a></div>
+        </div>
+        <div class="col-sm-2">
+            <div><a href="{{ url_for('indi_allsky.config_download_view', id=config_id) }}"><span class="badge bg-primary">Backup Config</span></a></div>
+        </div>
+        <div class="col-sm-2">
+            <div><a href="{{ url_for('indi_allsky.config_restore_view') }}"><span class="badge bg-danger text-dark">Config Restore</span></a></div>
         </div>
     </div>
 
@@ -5392,7 +5398,7 @@ var camera_id = {{ camera_id }};
         <div class="col-sm-2">
         </div>
         <div class="col-sm-5">
-            <a href="{{ url_for('indi_allsky.youtube_authorize_view') }}"><span class="badge rounded-pill bg-success text-dark">Authorize</span></a>
+            <a href="{{ url_for('indi_allsky.youtube_authorize_view') }}"><span class="badge bg-success text-dark">Authorize</span></a>
         </div>
         <div class="col-sm-5">Click to start Oauth2 authorization process</div>
     </div>
@@ -5410,7 +5416,7 @@ var camera_id = {{ camera_id }};
             </div>
         </div>
         <div class="col-sm-8">
-            <a href="{{ url_for('indi_allsky.youtube_oauth2revoke_view') }}"><span class="badge rounded-pill bg-warning text-dark">Revoke</span></a>
+            <a href="{{ url_for('indi_allsky.youtube_oauth2revoke_view') }}"><span class="badge bg-warning text-dark">Revoke</span></a>
         </div>
     </div>
 
