--- a/indi_allsky/flask/templates/config_list.html
+++ b/indi_allsky/flask/templates/config_list.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}indi-allsky: Configs{% endblock %}
+{% block title %}indi-allsky: Config History{% endblock %}
 
 {% block head %}
 <style>
@@ -38,7 +38,7 @@ var camera_id = {{ camera_id }};
   <td>{{ config.username }}</td>
   <td>{{ config.level }}</td>
   <td>{{ config.encrypted }}</td>
-  <td><a href="{{ url_for('indi_allsky.config_download_view', id=config.id) }}" class="text-decoration-none link-info">Download</a></td>
+  <td><a href="{{ url_for('indi_allsky.config_download_view', id=config.id) }}" class="text-decoration-none link-info"><span class="badge bg-primary">Download</span></a></td>
   <td>{{ config.note }}</td>
 </tr>
 {% endfor %}
