--- a/indi_allsky/flask/templates/config_restore.html
+++ b/indi_allsky/flask/templates/config_restore.html
@@ -18,6 +18,10 @@ var camera_id = {{ camera_id }};
 
     <hr>
 
+    <div><span class="badge rounded-pill bg-danger text-dark">Warning</span> Restoring a configuration will completely overwrite your existing configuration.  Older configurations will still remain available unless you flush previous configurations.<div>
+
+    <hr>
+
     <div class="form-group row">
         <div class="col-sm-2">
             {{ form_config_restore.CONFIG_UPLOAD.label(class='col-form-label') }}
