--- a/indi_allsky/flask/templates/config_restore.html
+++ b/indi_allsky/flask/templates/config_restore.html
@@ -41,7 +41,7 @@ var camera_id = {{ camera_id }};
         <div class="col-sm-2">
             {{ form_config_restore.FLUSH_CONFIGS.label }}
         </div>
-        <div class="col-sm-2">
+        <div class="col-sm-1">
             <div class="form-switch">
                 {{ form_config_restore.FLUSH_CONFIGS(class='form-check-input') }}
                 <div id="FLUSH_CONFIGS-error" class="invalid-feedback text-danger" style="display: none;"></div>
@@ -58,7 +58,7 @@ var camera_id = {{ camera_id }};
         <div class="col-sm-2">
             {{ form_config_restore.RESET_KEYS.label }}
         </div>
-        <div class="col-sm-2">
+        <div class="col-sm-1">
             <div class="form-switch">
                 {{ form_config_restore.RESET_KEYS(class='form-check-input') }}
                 <div id="RESET_KEYS-error" class="invalid-feedback text-danger" style="display: none;"></div>
@@ -66,6 +66,7 @@ var camera_id = {{ camera_id }};
         </div>
         <div class="col-sm-8">
             <div><span class="badge rounded-pill bg-warning text-dark">Warning</span> This will delete and recreate new security keys for flask</div>
+            <div>Your session will become invalidated and you will be forced to re-login</div>
         </div>
     </div>
 
