--- a/indi_allsky/flask/templates/config_list.html
+++ b/indi_allsky/flask/templates/config_list.html
@@ -27,7 +27,7 @@ var camera_id = {{ camera_id }};
   <th>Create</th>
   <th>User</th>
   <th>Level</th>
-  <th>Encrypted</th>
+  <th>Encrypted<br>Passwords</th>
   <th>Link</th>
   <th>Note</th>
 </div>
