--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -4447,7 +4447,10 @@ var camera_id = {{ camera_id }};
                 <div id="ENCRYPT_PASSWORDS-error" class="invalid-feedback text-danger" style="display: none;"></div>
             </div>
         </div>
-        <div class="col-sm-8">Encrypt passwords in the database</div>
+        <div class="col-sm-8">
+            <div>Encrypt passwords in the database</div>
+            <div><span class="badge rounded-pill bg-info text-dark">Note</span> Not recommended unless absolutely necessary</div>
+        </div>
     </div>
 
 </div><!-- end admin tab -->
