adjust reported modules

--- a/indi_allsky/flask/templates/system.html
+++ b/indi_allsky/flask/templates/system.html
@@ -253,6 +253,12 @@ var camera_id = {{ camera_id }};
 
 <div class="row">
     <div class="col-sm-2"></div>
+    <div class="col-sm-1">skyfield</div>
+    <div class="col-sm-1">{{skyfield_version}}</div>
+</div>
+
+<div class="row">
+    <div class="col-sm-2"></div>
     <div class="col-sm-1">astropy</div>
     <div class="col-sm-1">{{astropy_version}}</div>
 </div>
@@ -265,20 +271,8 @@ var camera_id = {{ camera_id }};
 
 <div class="row">
     <div class="col-sm-2"></div>
-    <div class="col-sm-1">ccdproc</div>
-    <div class="col-sm-1">{{ccdproc_version}}</div>
-</div>
-
-<div class="row">
-    <div class="col-sm-2"></div>
     <div class="col-sm-1">dbus</div>
     <div class="col-sm-1">{{dbus_version}}</div>
-</div>
-
-<div class="row">
-    <div class="col-sm-2"></div>
-    <div class="col-sm-1">paramiko</div>
-    <div class="col-sm-1">{{paramiko_version}}</div>
 </div>
 
 <div class="row">
