--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -2965,6 +2965,8 @@ var camera_id = {{ camera_id }};
         <div class="col-sm-8">0.6 is a good value for color images, 0.55 for mono</div>
     </div>
 
+    <hr>
+
     <div class="form-group row">
         <div class="col-sm-2">
             {{ form_config.DETECT_METEORS.label }}
@@ -9204,6 +9206,41 @@ $('#IMAGE_EXPORT_RAW').on('change', function() {
 });
 
 
+var group_fields_image_circle_mask= [
+    'IMAGE_CIRCLE_MASK__DIAMETER',
+    'IMAGE_CIRCLE_MASK__OFFSET_X',
+    'IMAGE_CIRCLE_MASK__OFFSET_Y',
+    'IMAGE_CIRCLE_MASK__BLUR',
+    'IMAGE_CIRCLE_MASK__OPACITY',
+];
+
+var group_checkbox_fields_image_circle_mask = [
+    'IMAGE_CIRCLE_MASK__OUTLINE'
+];
+
+// Image Circle Mask
+$('#IMAGE_CIRCLE_MASK__ENABLE').on('change', function() {
+    if (!$('#IMAGE_CIRCLE_MASK__ENABLE').prop('checked')) {
+        group_fields_image_circle_mask.forEach(item => {
+            $('#' + item).attr({'readonly': true, 'disabled': true});
+            $('#' + item).addClass('bg-dark text-secondary');
+        });
+
+        group_checkbox_fields_image_circle_mask.forEach(item => {
+            $('#' + item).attr({'readonly': true, 'disabled': true});
+        });
+    } else {
+        group_fields_image_circle_mask.forEach(item => {
+            $('#' + item).removeAttr('readonly disabled');
+            $('#' + item).removeClass('bg-dark text-secondary');
+        });
+
+        group_checkbox_fields_image_circle_mask.forEach(item => {
+            $('#' + item).removeAttr('readonly disabled');
+        });
+    }
+});
+
 
 $( document ).ready(function() {
     // Global timelapse
@@ -9434,6 +9471,18 @@ $( document ).ready(function() {
         });
 
         group_checkbox_fields_export.forEach(item => {
+            $('#' + item).attr({'readonly': true, 'disabled': true});
+        });
+    }
+
+
+    if (!$('#IMAGE_CIRCLE_MASK__ENABLE').prop('checked')) {
+        group_fields_image_circle_mask.forEach(item => {
+            $('#' + item).attr({'readonly': true, 'disabled': true});
+            $('#' + item).addClass('bg-dark text-secondary');
+        });
+
+        group_checkbox_fields_image_circle_mask.forEach(item => {
             $('#' + item).attr({'readonly': true, 'disabled': true});
         });
     }
