--- a/indi_allsky/flask/templates/config.html
+++ b/indi_allsky/flask/templates/config.html
@@ -1940,7 +1940,7 @@ var camera_id = {{ camera_id }};
             {{ form_config.TEXT_PROPERTIES__PIL_FONT_SIZE(class='form-control bg-secondary') }}
             <div id="TEXT_PROPERTIES__PIL_FONT_SIZE-error" class="invalid-feedback text-danger" style="display: none;"></div>
         </div>
-        <div class="col-sm-8">Size may be overridden in template</div>
+        <div class="col-sm-8">This field has no effect when font sizes are specified in the template itself</div>
     </div>
 
     <div class="form-group row">
